--- a/templates/acc_active_email.html
+++ b/templates/acc_active_email.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html>
-    <head></head>
-    <body>
+{% extends 'base.html' %}
+{% load staticfiles %}
+{% block content %}
         {% autoescape off %}
         Hi {{ user.username }},
         Please click on the link to confirm your registration,
         http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
         {% endautoescape %}
-    </body>
-</html>
+{% endblock %}
