--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,6 @@
-<html>
-    <head>
-        <title>login</title>
-    </head>
-    <body>
+{% extends 'base.html' %}
+{% load staticfiles %}
+{% block content %}
             <div class="form">
                     <form id="login_form" method="post" action="{% url 'login' %}">
                             {% csrf_token %}
@@ -13,5 +11,4 @@
                             <input type="submit" value="submit" />
                             </form>
             </div>
-    </body>
-</html>
+{% endblock %}
