--- a/templates/new_neighborhood.html
+++ b/templates/new_neighborhood.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>title</title>
-    </head>
-    <body>
+{% extends 'base.html' %}
+{% load staticfiles %}
+{% block content %}
         <div>     
             <form id="NeighborhoodForm" method="post" action="/create_neighborhood/" enctype="multipart/form-data">
     
@@ -21,5 +18,4 @@
                 <input type="submit" name="submit" value="Add Neighborhood" />
             </form>        
             </div>	
-    </body>
-</html>
+{% endblock %}
