--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,35 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <img src="{% static 'IMG/jumbotron' %}" border="0">
+    <div class="jumbotron jumbotron-fluid" style="padding: 0px; background-color: #403C3B;">
+        <div class="container" style="height: 400px; overflow: hidden; padding: 0px;">
+            <img src="{% static 'IMG/jumbotron.jpg' %}" border="0" style="width: 100vw;">
         </div>
+    </div>
+    <div class="context" style="padding-left: 20px; padding-right: 20px;">
+        <div class="synopsis" style="width: 50vw; float: left; display: inline;">
+        <h1>Looking to buy a new home?</h1>
+        <h4>Browse our Neighbood archives to find the one best suited to your needs. We collect data from neighborhoods all around Nairobi, and if you're so inclined, you can add data about your own!</h4>
+        </div>
+        <div class="join" style="float: right; width: 40vw; display: inline; border: 5px black solid; border-radius: 10px; padding: 10px;">
+            <h1>Join our community</h1>
+            <h4>To get started, create a free account. It only takes 5 minutes!</h4><br>
+            <a href="{% url 'signup' %}"><h5 style="margin-top:-10px;">Join now!</h6></a>
+        </div>
+    </div>
+    <div class="popular" style="margin-top: 350px;">
+        <div class="jumbotron jumbotron-fluid" style="padding: 0px; padding-left: 2vw;">
+                <div class="container" style="height: 200px; overflow: hidden; padding: 0px;">
+                   <h4>Recently Created Neighborhoods</h4>
+                   <a href="{% url 'neighborhoods' %}"><h6 style="display: inline; float: right;">See all</h6></a>
+                   {% for neighborhood in neighborhoods%}
+                   <div class="container" style="float: left; width: 20vw; margin-right: 2vw;">
+                        <img src="{{ neighborhood.image.url }}" style="width: 100%; height: 140px;">
+                        <div class="bottom-left">{{ neighborhood.name }}</div>
+                    </div>
+                   {% endfor %}
+                </div>
+            </div>
     </div>
 
 {% endblock %}
