made a neighborhood display page, worked on posts page and did other things I don't recall

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,11 @@
               </nav>
     <!-- NAVBAR ENDS -->
     {% endblock %}
+    {% if user.is_authenticated %}
+    <div class="content" style="padding-top: 80px;">
+    {% else %}
     <div class="content">
+    {% endif %}
 
 <!-- Modal -->
 <div id="SignUpIn" class="modal fade" role="dialog">
