--- a/templates/show_neighborhood.html
+++ b/templates/show_neighborhood.html
@@ -1,8 +1,28 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
-        <img src="{{ neighborhood.image.url }}" style="height: 100px;">
-        <p>Name: {{ neighborhood.name }}</p>
-        <p>Location: {{ neighborhood.location }}</p>
-        <p>Population: {{ neighborhood.population }}</p>
+<div class="background-color" style="height: 100%; background-color: grey; padding-top: 10px; padding-bottom: 10px; overflow: hidden;">
+<div class = "hood" style="background-color: white; height: 100%; border-radius: 10px; padding: 20px;">
+        <div class = "header" style="height: 250px; width: 100vw;">
+            <div class = "photo" style="width: 200px; height: 200px; -moz-border-radius: 100px; -webkit-border-radius: 100px; border-radius: 100px; border: 1px solid black; overflow: hidden; float: left;">
+
+                <img src="{{ neighborhood.image.url }}" style="width: 150%; display: block; margin: 0 auto;">
+
+            </div>
+
+            <p style="float: left; margin-left: 100px; font-size: 50px; font-style: italic;">{{ neighborhood.name }}</p>
+        </div>
+
+        <div class = "decription" style="display: block; padding-left: 350px; margin-top: -150px;">
+            <h3>Location: {{ neighborhood.location }}</h3>
+            <h3>Population: {{ neighborhood.population }}</h3>
+            <h3>Emergency Numbers:</h3>
+            <div class = "emergency_numbers" style="padding-left: 10px;">
+            <h3>Police: {{ neighborhood.police }}</h3>
+            <h3>Ambulance: {{ neighborhood.ambulance }}</h3>
+            </div>
+            <a href="{% url 'posts' id=neighborhood.id %}"><h3>Chat Room</h3></a>
+        </div>
+</div>
+</div>
 {% endblock %}
