did some work on business displays and created add business form

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-default navbar-fixed-top">
                 <div class="container-fluid">
                   <div class="navbar-header">
-                        <a class="navbar-brand"><img src=
+                        <a class="navbar-brand" href="{% url 'index' %}"><img src=
                             "https://images.vexels.com/media/users/3/131675/isolated/preview/30a4a09f3393d32f1a8c368373902c26-owl-head-icon-by-vexels.png" 
                                 alt="calligraphy-fonts" border="0" style="height: 30px; margin-top: -5px; display: inline;"><img src="https://fontmeme.com/permalink/180526/5793a5e7d98598b124b8f469a5e61fa4.png" alt="calligraphy-fonts" border="0" style="width: 50px; margin-top: -5px; display: inline;"><img src="https://fontmeme.com/permalink/180526/1acfb13a542e51eb9f2ca45f5bd47a6b.png" alt="calligraphy-fonts" border="0" style="width: 50px; margin-top: -7px; display: inline;"></a>
                                 {% if user.is_authenticated %}
@@ -115,5 +115,6 @@
     {% load staticfiles %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="{% static 'JS/showhideform.js' %}"></script>
     </body>
 </html>
