--- a/templates/view_neighborhoods.html
+++ b/templates/view_neighborhoods.html
@@ -9,8 +9,12 @@
                 <div class = "hood" style="background-color: white; height: 100%; border-radius: 10px; padding: 20px;">
                         <div class = "header" style="height: 250px; width: 100vw;">
                             <div class = "photo" style="width: 200px; height: 200px; -moz-border-radius: 100px; -webkit-border-radius: 100px; border-radius: 100px; border: 1px solid black; overflow: hidden; float: left;">
-                
+
+                                {% if neighborhood.image %}
                                 <img src="{{ neighborhood.image.url }}" style="width: 150%; display: block; margin: 0 auto;">
+                                {% else %}
+                                <img src="{% static 'IMG/no_image.svg' %}" style="width: 100%; display: block; margin: 0 auto;">
+                                {% endif %}
                 
                             </div>
                 
