fixed user-profile assocation

--- a/templates/edit_neighborhood.html
+++ b/templates/edit_neighborhood.html
@@ -25,4 +25,5 @@
                             <input type="submit" value="submit" />
                             </form>
             </div>
+            <a href="{% url 'delete_neighborhood' id=neighborhood.id%}"><p>Delete</p></a>
 {% endblock %}
