--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
-    <div class="jumbotron jumbotron-fluid" style="padding: 0px; background-color: #403C3B;">
+    <div class="jumbotron jumbotron-fluid" style="padding: 0px; background-color: #403C3B; background-image: url('/static/IMG/jumbotron.jpg'); background-size: 100vw;">
         <div class="container" style="height: 400px; overflow: hidden; padding: 0px;">
-            <img src="{% static 'IMG/jumbotron.jpg' %}" border="0" style="width: 100vw;">
+            <h1 class="display-4" style="margin-top: 100px;>
+                <form class="navbar-form" role="search" action="{% url 'search' %}">
+                <div class="input-group"><input class="inputbox" type="text" placeholder="Search for Neighborhoods or Businesses" name="contains" style="height: 40px; border-radius: 20px; padding-left: 20px; width: 60vw;font-size: 15px;"><button class="btn btn-default" type="submit" style="height: 40px; border-top-right-radius: 20px; border-bottom-right-radius: 20px; margin-top: 21px; margin-left: -40px;"><i class="glyphicon glyphicon-search"></i></button></div></form>
+            </h1>
         </div>
-        <form class="navbar-form" role="search" action="{% url 'search' %}">
-                <div class="input-group"><input class="inputbox" type="text" placeholder="Search" name="contains"><button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button></div></form>
+        
     </div>
     <div class="context" style="padding-left: 20px; padding-right: 20px;">
         <div class="synopsis" style="width: 50vw; float: left; display: inline;">
