--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
-    <div>     
+    <div style="padding-left: 10px;">
+        <h3>Make a post!</h3>  
+        <h5>You can post a picture, text or both!</h5>
         <form id="PostForm" method="post" action="/view/{{ neighborhood.id }}/posts/" enctype="multipart/form-data">
 
             {% csrf_token %}
@@ -15,18 +17,27 @@
                 {{ field }}
             {% endfor %}
             <input type="hidden" name="next" value="{{ request.path }}">
-            <input type="submit" name="submit" value="Post" />
+            <input type="submit" name="submit" value="Post" style="border: solid 2px black; border-radius: 10px; margin-top: 5px;"/>
         </form>        
     </div>	
-    
-    <div class="posts">
+    <h1 style="text-align:center;">POSTS</h1>
+    <div class="posts" style="margin-top: 50px;">
         {% for post in posts %}
-        <div class="post" style="border: 1px black solid;">
-        <p>{{ post.author.username }}</p>
+        <div class="post" style="border: 2px black solid; padding-left: 20px; padding-right: 20px; border-radius:20px; padding-top: 10px;">
+
+            <div class = "photo" style="width: 50px; height: 50px; -moz-border-radius: 100px; -webkit-border-radius: 100px; border-radius: 100px; border: 1px solid black; overflow: hidden; float: left; margin-right: 10px;">
+                {% if useruserprofile.image %}
+                <img src="{{ user.image.url }}" style="width: 150%; display: block;margin: 0 auto;">
+                {% else %}
+                <img src="{% static 'IMG/no_image.svg' %}" style="width: 100%; display: block;margin: 0 auto;">
+                {% endif %}
+            </div>
+
+        <h3>{{ post.author.username }}</h3>
         {% if post.image %}
         <img src="{{ post.image.url }}" style="height: 100px;">
         {% endif %}
-        <p>{{ post.text_post }}</p>
+        <div style="margin-left: 70px"</div><h2>{{ post.text_post }}</h5></div>
         </div><br>
         {% endfor %}
     </div>
