--- a/templates/home.html
+++ b/templates/home.html
@@ -3,9 +3,9 @@
 {% block content %}
     <div class="jumbotron jumbotron-fluid" style="padding: 0px; background-color: #403C3B; background-image: url('/static/IMG/jumbotron.jpg'); background-size: 100vw;">
         <div class="container" style="height: 400px; overflow: hidden; padding: 0px;">
-            <h1 class="display-4" style="margin-top: 100px;>
+            <h1 class="display-4" style="margin-top: 100px;">
                 <form class="navbar-form" role="search" action="{% url 'search' %}">
-                <div class="input-group"><input class="inputbox" type="text" placeholder="Search for Neighborhoods or Businesses" name="contains" style="height: 40px; border-radius: 20px; padding-left: 20px; width: 60vw;font-size: 15px;"><button class="btn btn-default" type="submit" style="height: 40px; border-top-right-radius: 20px; border-bottom-right-radius: 20px; margin-top: 21px; margin-left: -40px;"><i class="glyphicon glyphicon-search"></i></button></div></form>
+                <div class="input-group"><input class="inputbox" type="text" placeholder="Search for Neighborhoods or Businesses" name="contains" style="height: 40px; border-radius: 20px; padding-left: 20px; width: 60vw;font-size: 15px;"><button class="btn btn-default" type="submit" style="height: 40px; border-top-right-radius: 20px; border-bottom-right-radius: 20px; margin-top: 21.5px; margin-left: -40px;"><i class="glyphicon glyphicon-search"></i></button></div></form>
             </h1>
         </div>
         
