--- a/templates/show_neighborhood.html
+++ b/templates/show_neighborhood.html
@@ -53,7 +53,7 @@
                             {{ field }}
                         {% endfor %}
                         <input type="hidden" name="next" value="{{ request.path }}">
-                        <input type="submit" name="submit" value="Add Business" />
+                        <input type="submit" name="submit" value="Add Business" style="border: solid 2px black; border-radius: 10px; margin-top: 5px;"/>
                     </form>    
             </div>
         </div>
