--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,16 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
-            <div class="form">
-                    <form id="login_form" method="post" action="{% url 'login' %}">
-                            {% csrf_token %}
-                            Username: <input type="text" name="username" value="" size="50" />
-                            <br />
-                            Password: <input type="password" name="password" value="" size="50" />
-                            <br />
-                            <input type="submit" value="submit" />
-                            </form>
-            </div>
+<div class="form" style="text-align: center; margin-top: 10vh;">
+        <h1>Please log in to continue</h1>
+        <form id="login_form" method="post" action="{% url 'login' %}">
+                {% csrf_token %}
+                <p>Username:</p>
+                <input type="text" name="username" value="" size="50" style="padding-left: 20px;"/>
+                <p>Password:</p>
+                <input type="password" name="password" value="" size="50" style="padding-left: 20px;"/>
+                <input type="submit" value="login" style="border: solid 2px black; border-radius: 10px; margin-top: 5px;"/>
+                </form>
+                <a href="{% url 'signup' %}"><h5>Dont' have an account? Sign Up!</h5></a>
+</div>
 {% endblock %}
