--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block content %}
-  <h2>Sign up</h2>
+<h1 style="text-align: center;">Please sign up to continue</h1>
+<div class="form" style="text-align: center; margin-top: 5vh; width: 15vw; margin:auto;">
   <form method="post">
     {% csrf_token %}
       {% for field in user_form %}
@@ -30,4 +31,6 @@
       {% endfor %}
     <button type="submit">Sign up</button>
   </form>
+  </div>
+  <a href="{% url 'login' %}"><h5 style="text-align: center;">Already have an account? Login!</h5></a>
 {% endblock %}
