--- a/templates/signup.html
+++ b/templates/signup.html
@@ -29,7 +29,7 @@
         {% endfor %}
       </p>
       {% endfor %}
-    <button type="submit">Sign up</button>
+    <button type="submit" style="border: solid 2px black; border-radius: 10px; margin-top: 5px;">Sign up</button>
   </form>
   </div> 
   <a href="{% url 'login' %}"><h5 style="text-align: center;">Already have an account? Login!</h5></a>
