--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,11 @@
                     {% if user.is_authenticated %}
                     <li class=""><a href="{% url 'logout' %}">Logout</a></li>
                     {% else %}
-                    <li class=""><a data-toggle="modal" data-target="#SignUpIn">Sign Up</a></li>
+                      {% if request.path == "/" %}
+                      <li class=""><a data-toggle="modal" data-target="#SignUpIn">Sign Up</a></li>
+                      {% else %}
+                      <li class=""><a href="{% url 'signup' %}">Sign Up</a></li>
+                      {% endif %}
                     {% endif %}
                   </ul>
                 </div>
