--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,10 @@
                   </div>
                   <ul class="nav navbar-nav">
                     <li class=""><a href="{% url 'neighborhoods' %}">Hoods</a></li>
-                    <li class=""><a href=""></a></li>                    
+                    <li class=""><a href=""></a></li> 
+                    {% if request.path == "/view/" %}
+                    <li class=""><a href="{% url 'create_neighborhood' %}">Add a Neighborhood</a></li>
+                    {% endif %}                   
                     {% if user.is_authenticated %}
                     <li class=""><a href="{% url 'logout' %}">Logout</a></li>
                     {% else %}
