--- a/templates/new_neighborhood.html
+++ b/templates/new_neighborhood.html
@@ -15,7 +15,7 @@
         
                     {% for field in form.visible_fields %}
                         {{ field.errors }}
-                        <p>{{ field.help_text }}</p><br>
+                        <p>{{ field.help_text }}</p>
                         {{ field }}
                         <br>
                     {% endfor %}<br>
