fixed login and signup

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -30,6 +30,7 @@
       </p>
       {% endfor %}
     <button type="submit" style="border: solid 2px black; border-radius: 10px; margin-top: 5px;">Sign up</button>
+    <h6>You will be sent an email with an activation code. You need to activate your account before usage.</h6>
   </form>
   </div> 
   <a href="{% url 'login' %}"><h5 style="text-align: center;">Already have an account? Login!</h5></a>
