--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
       <div class="modal-header" style="border: none;">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
-      <div class="modal-body" style="height: 85vh;">
+      <div class="modal-body" style="height: 91vh;">
         <div class="SignUp" style="display: inline; float: left; width: 50%; height: 100%; border-right: solid gray 1px;">
 
             <p>Sign Up!</p>
@@ -95,8 +95,9 @@
                         {% endfor %}
                       </p>
                       {% endfor %}
-                      <input type="hidden" name="next" value="{{ request.path }}">
+                      <!-- <input type="hidden" name="next" value="{{ request.path }}"> -->
                     <button type="submit"  style="border: solid 2px black; border-radius: 10px; margin-top: 5px;">Sign up</button>
+                    <p>You will be sent an email with an activation code. You need to activate your account before usage.</p>
                   </form>
         </div>
         <div class="SignIn" style="display: inline; float: left; width: 50%; padding-left: 10px;">
